# server

./: .env.example  .gitignore  pyproject.toml
alembic/versions/: 12fb7f608749_initial_tables.py
app/: main.py
app/api/: deps.py
app/api/v1/: auth.py  places.py  router.py  trip_reels.py  trips.py  video_media.py
app/core/: config.py  errors.py  security.py
app/db/: session.py
app/models/: __init__.py  profile.py  trip.py  trip_reel.py  video_media.py
app/repositories/: media_repository.py  profile_repository.py  trip_repository.py
app/schemas/: place.py  profile.py  trip.py  trip_reel.py  video_media.py
app/services/: media_service.py  places_service.py  profile_service.py  trip_service.py
tests/: conftest.py  test_video_media.py
